--- a/kaygee/package.json
+++ b/kaygee/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-  "react": "^19.2.0",
-  "react-dom": "^19.2.0",
-  "react-icons": "^4.12.0",
-  "react-router-dom": "^7.9.6",
-  "styled-components": "^6.1.19",
-  "vite": "^7.2.2",
-  "@vitejs/plugin-react": "^5.1.0"
+    "@vitejs/plugin-react": "^5.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^7.9.6",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -29,6 +28,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "tailwindcss": "^4.1.17",
-    "vite": "^7.2.2"
+    "vite": "^7.2.6"
   }
 }
